<resources>
    <string name="airpurifier_cm_san_qrcode">Scan the QR code located behind your purifier</string>
    <string name="airpurifier_cm_san_qrcode_msg">Please allow Rowenta to access to your camera, in your privacy settings / Camera</string>
    <string name="airpurifier_public_ok">OK</string>
    <string name="airpurifier_public_cancel">Cancel</string>
    <string name="airpurifier_public_refuse">Refuse</string>
    <string name="airpurifier_public_confirm">Confirm</string>
    <string name="airpurifier_public_nodata">No Data</string>
    <string name="airpurifier_public_fail">Fail</string>
    <string name="airpurifier_public_success">Success</string>
    <string name="airpurifier_login_cookies_title">Cookies</string>
    <string name="airpurifier_login_cookies_more">Settings</string>
    <string name="airpurifier_login_show_forgetpwd_text">Forgotten password</string>
    <string name="airpurifier_login_show_register_text">Create an account</string>
    <string name="airpurifier_login_show_button_text">Log in</string>
    <string name="airpurifier_login_show_email_hint">Input email address</string>
    <string name="airpurifier_login_show_pwd_hint">Input password</string>
    <string name="airpurifier_login_show_toswrongpwdaccount_text">Account or password is wrong</string>
    <string name="airpurifier_login_show_tosneterror_text">Network connection error</string>
    <string name="airpurifier_login_show_toslogining_text">Being logged in, please hold on...</string>
    <string name="airpurifier_login_show_registepasswordrule_text">Minimum 8 characters, including 1 capital letter, 1 small letter, 1 number.</string>
    <string name="airpurifier_login_show_email_text">E-mail</string>
    <string name="airpurifier_login_show_currentpassword_text">Current password</string>
    <string name="airpurifier_login_show_pwd_text">Password</string>
    <string name="airpurifier_login_show_button_submittext">Submit</string>
    <string name="airpurifier_login_show_registertosphonealreadyregidter_text">This account already exists</string>
    <string name="airpurifier_login_show_registertosinvalidphonenumber_text">Wrong email address</string>
    <string name="airpurifier_login_show_registerwelcome_text">Welcome to Rowenta universe! Please first read the agreement and confirm to accept it.</string>
    <string name="airpurifier_login_show_register_agreementtitle_text">Rowenta User Agreement</string>
    <string name="airpurifier_login_show_registeracceptagreement_text">Confirm</string>
    <string name="airpurifier_login_show_registerreadagreement_text">I have read and accept the Rowenta User Agreement</string>
    <string name="airpurifier_login_show_registeconfirmpwd_text">Confirm password</string>
    <string name="airpurifier_login_show_changepassword_text">Reset password</string>
    <string name="airpurifier_login_show_login_text">Sign in</string>
    <string name="airpurifier_login_show_reset_title_text">Retrieve password</string>
    <string name="airpurifier_login_show_registertosregistfailed_text">Login has failed</string>
    <string name="airpurifier_login_show_tosnodevice_text">No device</string>
    <string name="airpurifier_register_show_registertext_title">Register</string>
    <string name="airpurifier_register_findpwd">Retrieve password</string>
    <string name="airpurifier_register_show_pwd_placeholder">Input here</string>
    <string name="airpurifier_register_show_inputemailaddress_hint">Input email address</string>
    <string name="airpurifier_more_show_havenodevice_text">You haven\'t connected the device</string>
    <string name="airpurifier_more_show_rightcovers_text">The front cover is open, please check it!</string>
    <string name="airpurifier_more_show_deviceFailure_text">Device failure</string>
    <string name="airpurifier_more_show_settings_text">Settings</string>
    <string name="airpurifier_more_show_nothank_text">No thank you</string>
    <string name="airpurifier_dialog_show_openopintment_text">Start programming</string>
    <string name="airpurifier_dialog_show_slidingremind_text">Swipe to switch to other products</string>
    <string name="airpurifier_more_show_head_text">Avatar</string>
    <string name="airpurifier_more_show_nickname_text">Nickname</string>
    <string name="airpurifier_more_show_change_password_text">Change password</string>
    <string name="airpurifier_more_show_area">Space area of device</string>
    <string name="airpurifier_more_show_start">Start</string>
    <string name="airpurifier_more_show_end">End</string>
    <string name="airpurifier_more_show_worktime">Workdays</string>
    <string name="airpurifier_more_show_exitcurrentaccount_text">Logout</string>
    <string name="airpurifier_more_show_areyousureexit_text">Are you sure you want to disconnect?</string>
    <string name="airpurifier_more_show_personaltitle_text">Complete personal information</string>
    <string name="airpurifier_more_show_takephoto_text">Take a picture</string>
    <string name="airpurifier_more_show_selectfromalbum_text">Select from album</string>
    <string name="airpurifier_more_show_modifyName_title">Modify nickname</string>
    <string name="airpurifier_more_show_modifyname_hint">Input product name</string>
    <string name="airpurifier_push_alert_pm_no">No more warning</string>
    <string name="airpurifier_push_alert_pm_yes">Turn on immediately</string>
    <string name="airpurifier_push_alert_lv_yes">Change</string>
    <string name="airpurifier_push_msg">We advise to turn the air purifier on %s minutes before coming home</string>
    <string name="airpurifier_more_show_open_text"> On</string>
    <string name="airpurifier_more_show_close_text"> Off</string>
    <string name="airpurifier_more_show_preferences_text">Preferences &amp; Legal Issues</string>
    <string name="airpurifier_more_show_gong_text">Gas</string>
    <string name="airpurifier_more_show_gongdevice_text"> Device</string>
    <string name="airpurifier_more_show_myorder_text"> My scheduling</string>
    <string name="airpurifier_more_show_mynews_text">My news</string>
    <string name="airpurifier_more_show_setbusinesstime_text">Set a time schedule</string>
    <string name="airpurifier_more_show_freeaftersaleshotline_text">Free hotline</string>
    <string name="airpurifier_more_show_aftersalesservicenetwork_text">Service network after sales</string>
    <string name="airpurifier_more_show_setting_title">Setting</string>
    <string name="airpurifier_more_show_theifuofproduct_text">User guide</string>
    <string name="airpurifier_moredevice_show_mydevice_title">My device</string>
    <string name="airpurifier_moredevice_show_type_text">Rowenta XL in EU</string>
    <string name="airpurifier_more_show_devicemodelnumber_text">%s</string>
    <string name="airpurifier_moredevice_show_deviceinfo_text">Device Information</string>
    <string name="airpurifier_moredevice_show_devicecode_text">Product sharing</string>
    <string name="airpurifier_more_show_sureremovebinddevice_text">Remove the pairing</string>
    <string name="airpurifier_more_show_warning_text">WARNING</string>
    <string name="airpurifier_moredevice_show_membermenage_text">Information on sharing</string>
    <string name="airpurifier_moredevice_show_devicemac_text">Mac add</string>
    <string name="airpurifier_moredevice_show_controlfailed_text">Check your phone network</string>
    <string name="airpurifier_moredevice_show_netnormal_text">Network error</string>
    <string name="airpurifier_moredevice_show_scanqrcode_text">Scan QR code</string>
    <string name="airpurifier_moredevice_show_manuallyadd_text">Manually Add</string>
    <string name="airpurifier_moredevice_show_deviceList_title">My devices</string>
    <string name="airpurifier_more_show_suporttreater_text">Rowenta air purifier %s</string>
    <string name="airpurifier_moredevice_show_addsuccess">Successfully added</string>
    <string name="airpurifier_moredevice_show_choose_type">Select model</string>
    <string name="airpurifier_moredevice_show_wifi_set">Wi-Fi settings</string>
    <string name="airpurifier_moredevice_show_device_bind">Device pairing</string>
    <string name="airpurifier_moredevice_show_usemethod_text">Once the purifier is on, Push the Wi-Fi button on the device for 3 seconds. After hearing a \"Ding\" from the device, the Wi-Fi indicator starts flashing, showing the device is now in configuration mode. Then, input the name and password of the network and click \"Start Configuration\".</string>
    <string name="airpurifier_moredevice_show_addnewdevice_text">Add new device</string>
    <string name="airpurifier_moredevice_show_name_text">Name</string>
    <string name="airpurifier_moredevice_show_wifipwd_text">Password</string>
    <string name="airpurifier_moredevice_show_pullelectricretry_text">Please unplug the device and plug it again.</string>
    <string name="airpurifier_moredevice_show_retry_text">Try again</string>
    <string name="airpurifier_moredevice_show_scanqrcode_add">Scan the QR code located behind your purifier </string>
    <string name="airpurifier_more_show_modifydevicename_title">Name</string>
    <string name="airpurifier_moredevice_show_macaddress_text">MAC Address</string>
    <string name="airpurifier_moredevice_show_searchdevicewait_text">Searching device, please wait...</string>
    <string name="airpurifier_moredevice_show_adddevice_text">Add device</string>
    <string name="airpurifier_more_show_checkwifi_text">Please check if the Wi-Fi is active on your phone and if you are connected to the same Wi-Fi as your product.</string>
    <string name="airpurifier_more_show_shareqrcode_text">Share pairing by QR code or login</string>
    <string name="airpurifier_more_show_fiveminutesrefreshago_text">This QR code is valid for 5 minutes</string>
    <string name="airpurifier_more_show_sharethroughphone_text"> Share by login</string>
    <string name="airpurifier_more_show_cancelsharealign_text">Cancel</string>
    <string name="airpurifier_more_show_emailtip_text">Please correctly enter the e-mail address. This user must have already installed the application and have created an account.</string>
    <string name="airpurifier_moredevice_show_phoneshare_text">Share e-mail</string>
    <string name="airpurifier_moredevice_show_devicesharefailed_text">Device sharing failed</string>
    <string name="airpurifier_moredevice_show_sharetophone_hint">Please input email</string>
    <string name="airpurifier_more_show_virifynicknamefailed_text">Nickname modification failed</string>
    <string name="airpurifier_more_show_modifyname_button">Confirm modification</string>
    <string name="airpurifier_more_show_modifyname_text">Create an account</string>
    <string name="airpurifier_adjust_show_currentcity_text">Current City</string>
    <string name="airpurifier_adjust_show_none_text">None</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="aplink_desc_p9">Check if the Wi-Fi is your home Wi-Fi hotspot and enter the password</string>
    <string name="fragment_p14_one">Check if the password you entered is correct</string>
    <string name="fragment_p14_two">Check if the Wi-Fi is working at your home</string>
    <string name="fragment_p14_three">If the Wi-Fi indicator on your purifier is no longer flashing, hold the Wi-Fi button for 3 seconds.</string>
    <string name="fragment_p14_four">If nothing is working, try to restart the device and start again.</string>
    <string name="input_password">Input password</string>
    <string name="relocation">Geo-Tracking</string>
    <string name="airpurifier_aplink_request_permission_tip">Android may ask for a permission to connect with your product successfully. Please accept.</string>
    <string name="airpurifier_aplink_fail_about_permission">Check in your settings that the location permission is activated.</string>
</resources>