<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132px"
        android:layout_marginLeft="@dimen/dimen_px_60"
        android:layout_marginRight="@dimen/dimen_px_60"
        >
        <TextView
            android:id="@+id/tv_phone_lbl"
            android:layout_width="250px"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/dimen_px_48"
            android:layout_marginLeft="@dimen/dimen_px_42"
            android:text = "@string/airpurifier_login_show_email_text"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="636px"
            android:layout_height="126px"
            android:singleLine="true"
            android:layout_marginLeft="10px"
            android:layout_marginRight="@dimen/dimen_px_48"
            android:textSize="@dimen/dimen_px_42"
            android:layout_toRightOf="@id/tv_phone_lbl"
            android:hint="@string/airpurifier_register_show_inputemailaddress_hint"
            style="@style/EditTextStyle" />
        <ImageView
            android:id="@+id/delete_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_delete"
            android:layout_alignRight="@+id/phone"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_px_36"
            android:visibility="gone"/>
    </com.zhy.autolayout.AutoRelativeLayout>




    <Button
        android:id="@+id/phone_next"
        android:layout_marginTop="138px"
        style="@style/btn_style"
        android:textSize="@dimen/dimen_px_48"
        android:layout_gravity="center_horizontal"
        android:text="@string/airpurifier_login_show_changepassword_text"
       />

</com.zhy.autolayout.AutoLinearLayout>