<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey">

    <TextView
        android:id="@+id/tv_current_city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dimen_px_60"
        android:text="@string/airpurifier_adjust_show_currentcity_text"
        android:textColor="@color/more_gray_text"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/airpurifier_adjust_show_none_text"
        android:textColor="@color/default_blue"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toLeftOf="@id/tv_current_city_text"
        app:layout_constraintTop_toBottomOf="@id/tv_current_city_text" />

    <Button
        android:id="@+id/bt_relocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/relocation"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/tv_current_city_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_current_city_text" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72px"
        android:background="@color/white"
        android:paddingBottom="24px"
        android:paddingTop="24px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_city">

        <ListView
            android:id="@+id/lv_country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="300px"
            android:layout_marginLeft="@dimen/dimen_px_60"
            android:layout_marginRight="@dimen/dimen_px_60">

        </ListView>
    </com.zhy.autolayout.AutoLinearLayout>

</android.support.constraint.ConstraintLayout>